// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex/> should renders correctly 1`] = `
<div>
  <div
    class="sc-gtsrHT boDAaM"
  >
    <div
      class="sc-bdnxRM jHOwq"
    />
  </div>
</div>
`;

exports[`<Flex/> should renders correctly 2`] = `
<div>
  <div
    class="sc-gtsrHT jAwtTr"
  />
</div>
`;

exports[`<Flex/> should renders gapless 1`] = `
<div>
  <div
    class="sc-gtsrHT bWXhAY"
  />
</div>
`;
